--- a/assets/assets.css
+++ b/assets/assets.css
@@ -52,7 +52,6 @@ nav {
     width: 100%; 
     background-color: white; 
     z-index: 1000; 
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); 
     padding: 10px 0;
 }
 
@@ -68,11 +67,9 @@ nav {
     color: black; 
     font-weight: bold;
 }
-
 .green{
 	color: #4ED521!important;
 }
-
 .navcontainer {
 	display: flex;
 	flex-wrap: wrap;
@@ -81,15 +78,11 @@ nav {
 	padding-right: 20px;
 	
 }
-
 .navcontainer a{
-	text-decoration: none; /* Tar bort understrykning */
-    color: black; /* Textfärg */
+	text-decoration: none; 
+    color: black; 
     font-weight: bold;
 }
-
-
-
 .logocontainer {
 	display: flex;
 	flex-wrap: wrap;
@@ -97,7 +90,6 @@ nav {
 	padding-left: 10px;
 	gap: 10px;
 }
-
 .menu-icon{
 	display: none;
 	font-size: 25px;
@@ -106,11 +98,8 @@ nav {
 	background-color: #7E8A78;
 	border-radius: 3px;
 }
-
-
 .arrow {
     font-size: 12px;
-   
 }
 
 
@@ -433,22 +422,6 @@ Medlemskaps sida
 	margin-top: 20px;
 }
 
-.membership-form h3 {
-    background-color: #7E8A78;
-    color: white;
-    padding: 10px;
-    border-radius: 10px 10px 0 0;
-    margin: -20px -20px 20px -20px;
-    text-align: center;
-}
-
-.membership-form label {
-    font-weight: bold;
-    margin-bottom: 5px;
-    display: block;
-    color: #333;
-}
-
 .membership-form input[type="text"],
 .membership-form input[type="email"] {
     width: 100%;
@@ -468,6 +441,24 @@ Medlemskaps sida
 .membership-form .form-row div {
     flex: 1;
 }
+
+.membership-form h3 {
+    background-color: #7E8A78;
+    color: white;
+    padding: 10px;
+    border-radius: 10px 10px 0 0;
+    margin: -20px -20px 20px -20px;
+    text-align: center;
+}
+
+.membership-form label {
+    font-weight: bold;
+    margin-bottom: 5px;
+    display: block;
+    color: #333;
+}
+
+
 
 .membership-form button {
     display: block;
@@ -516,7 +507,7 @@ historia
 	margin-top: 60vh;
 }
 
-/* Skapa linjen i mitten */
+
 .timeline-container {
     position: relative;
     max-width: 800px;
@@ -529,7 +520,7 @@ historia
     width: 50%;
 }
 
-/* Växla mellan vänster och höger */
+
 .timeline-event:nth-child(odd) {
     text-align: right;
     left: 0;
@@ -540,7 +531,7 @@ historia
     left: 50%;
 }
 
-/* Markeringar vid varje händelse */
+
 .timeline-event::before {
     content: "";
     position: absolute;
@@ -624,7 +615,6 @@ Konakta oss
 
 .box h2, .box a{
 	margin-bottom: 5px;
-	
 }
 
 /*
